<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oppacity_new"
    tools:context=".registrationPagePart2">


    <ImageView
        android:id="@+id/imageShade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BAFFE6DA"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true"
        android:layout_marginBottom="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="100dp"

                android:layout_marginRight="100dp"
                android:text="@string/Step2"
                android:textAlignment="center"


                android:textColor="#FA4487"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/descriptionSigUp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/descriptionSigUp2"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FA4487"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Dexription2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="upload a picture"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="don't worry you will be able to add more pictures later" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_marginTop="-6dp"
                android:layout_marginBottom="-6dp"
                android:layout_weight="1"
                android:clickable="true"
                android:scaleX="1.3"
                app:srcCompat="@drawable/ic_add_image"
                tools:ignore="ContentDescription,VectorDrawableCompat" />



            <!-- content description for user -->
            <TextView
                android:id="@+id/personDexcription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:text="@string/personDexcription" />
            <TextView
                android:id="@+id/personDexcription2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:text="@string/personDexcription2" />
            <!-- decription of the user -->

            <EditText
                android:id="@+id/aboutMeTxt"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="#85FFFFFF"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/inputforInputUser"
                android:inputType="textMultiLine"
                android:textColor="#5F5F5F"
                android:textColorHint="#C68A8888"
                android:textSize="25sp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:text="please enter your age" />

            <EditText
                android:id="@+id/ageTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="#85FFFFFF"
                android:ems="10"
                android:textSize="25sp"
                android:inputType="number" />

            <TextView
                android:id="@+id/minUserAgeLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Show users no younger than"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/minAgeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Minimum Age"
                android:inputType="number" />

            <TextView
                android:id="@+id/maxUserAgeLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Show users not older than"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/maxAgeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Maximum age"
                android:inputType="number" />

            <TextView
                android:id="@+id/textAlmotsthere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:text="@string/textAlmostthere"
                android:textAlignment="center"
                android:textColor="#FF639B"
                android:textSize="30sp" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="10dp"
            android:background="#94FFFFFF"
            android:text="@string/backBtn"
            android:textAllCaps="false"
            android:textColor="#FF9E80"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/nextBtn2"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="10dp"
            android:background="#94FFFFFF"
            android:text="@string/nextBtn"
            android:textAllCaps="false"
            android:textColor="#F1377B"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>