<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordPage"
    android:background="@drawable/oppacity_new"
    >

    <ImageView
        android:id="@+id/imageShade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BAFFE6DA"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayoutFP"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot your password?"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textSize="45sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/promptEmailLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/promptEmailLb"
            android:textColor="@color/browser_actions_bg_grey" />

        <EditText
            android:id="@+id/emailTxt"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#72FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/browser_actions_bg_grey"
            android:textSize="30sp"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <Button

            android:id="@+id/doneBtn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            android:background="#94FFFFFF"
            android:text="@string/doneBtn"
            android:textAllCaps="false"
            android:textColor="#F1377B"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayoutFP"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal">

        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"

            android:background="#94FFFFFF"
            android:text="@string/CancelBtn"
            android:textAllCaps="false"
            android:textColor="#FF9E80"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</RelativeLayout>